scores by school type.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4797,8 +4797,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "a0838a34",
+   "execution_count": 60,
+   "id": "3b89f182",
    "metadata": {},
    "outputs": [
     {
@@ -5025,7 +5025,7 @@
        "[11408 rows x 11 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5039,8 +5039,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "18841fa6",
+   "execution_count": 61,
+   "id": "929556a6",
    "metadata": {},
    "outputs": [
     {
@@ -5267,7 +5267,7 @@
        "[10168 rows x 11 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5281,8 +5281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "610fd41e",
+   "execution_count": 62,
+   "id": "eb1c6f0e",
    "metadata": {},
    "outputs": [
     {
@@ -5509,7 +5509,7 @@
        "[9695 rows x 11 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5523,8 +5523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "848d9526",
+   "execution_count": 63,
+   "id": "921f51a6",
    "metadata": {},
    "outputs": [
     {
@@ -5751,7 +5751,7 @@
        "[7899 rows x 11 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5765,8 +5765,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "8584235c",
+   "execution_count": 64,
+   "id": "116d345a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5784,8 +5784,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "98f5ddfb",
+   "execution_count": 65,
+   "id": "573e3159",
    "metadata": {},
    "outputs": [
     {
@@ -5810,7 +5810,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5821,8 +5821,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "7f6c4d3d",
+   "execution_count": 66,
+   "id": "0cb4767e",
    "metadata": {},
    "outputs": [
     {
@@ -5847,7 +5847,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5858,8 +5858,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "c50db9ec",
+   "execution_count": 67,
+   "id": "f1f1e266",
    "metadata": {},
    "outputs": [
     {
@@ -5884,7 +5884,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5895,8 +5895,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "c1e6c4ab",
+   "execution_count": 68,
+   "id": "c5b82285",
    "metadata": {},
    "outputs": [
     {
@@ -5921,7 +5921,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5932,8 +5932,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "ad4d191e",
+   "execution_count": 69,
+   "id": "c2b71fdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5951,8 +5951,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "f0e6fdd7",
+   "execution_count": 70,
+   "id": "0a3217b8",
    "metadata": {},
    "outputs": [
     {
@@ -5977,7 +5977,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5988,8 +5988,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "85179f44",
+   "execution_count": 71,
+   "id": "707640f3",
    "metadata": {},
    "outputs": [
     {
@@ -6014,7 +6014,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6025,8 +6025,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "76f3ac06",
+   "execution_count": 72,
+   "id": "a3f00491",
    "metadata": {},
    "outputs": [
     {
@@ -6051,7 +6051,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6062,8 +6062,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "88673f03",
+   "execution_count": 73,
+   "id": "5499fdf6",
    "metadata": {},
    "outputs": [
     {
@@ -6088,7 +6088,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6099,8 +6099,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "5a16ca6b",
+   "execution_count": 74,
+   "id": "363e9e3b",
    "metadata": {},
    "outputs": [
     {
@@ -6267,7 +6267,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6285,8 +6285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "0b02fb78",
+   "execution_count": 75,
+   "id": "78e00b56",
    "metadata": {},
    "outputs": [
     {
@@ -6453,7 +6453,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6471,8 +6471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "890ae8ed",
+   "execution_count": 76,
+   "id": "5c907661",
    "metadata": {},
    "outputs": [
     {
@@ -6551,7 +6551,7 @@
        "Griffin High School   82.0  84.2  83.8  83.4"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6578,8 +6578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "951e3a41",
+   "execution_count": 77,
+   "id": "d64816fc",
    "metadata": {},
    "outputs": [
     {
@@ -6658,7 +6658,7 @@
        "Griffin High School   83.4  83.7  84.3  84.0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6685,8 +6685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "72b11a04",
+   "execution_count": 78,
+   "id": "ce6758af",
    "metadata": {},
    "outputs": [
     {
@@ -6703,7 +6703,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6715,8 +6715,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "e60c7642",
+   "execution_count": 79,
+   "id": "461e3b89",
    "metadata": {
     "scrolled": true
    },
@@ -6743,7 +6743,7 @@
        "Categories (4, interval[int64, right]): [(0, 585] < (585, 630] < (630, 645] < (645, 675]]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6757,8 +6757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "56dd4ce0",
+   "execution_count": 80,
+   "id": "f90d1fbc",
    "metadata": {},
    "outputs": [
     {
@@ -6771,7 +6771,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6782,8 +6782,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "56f8de1d",
+   "execution_count": 81,
+   "id": "ee601e02",
    "metadata": {},
    "outputs": [
     {
@@ -7106,7 +7106,7 @@
        "Wright High School                            <$586  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7120,8 +7120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "72e01f6e",
+   "execution_count": 82,
+   "id": "74e5eac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7140,8 +7140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "488333ff",
+   "execution_count": 83,
+   "id": "790dc38e",
    "metadata": {},
    "outputs": [
     {
@@ -7155,7 +7155,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7166,8 +7166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "c30337aa",
+   "execution_count": 84,
+   "id": "c513a957",
    "metadata": {
     "scrolled": true
    },
@@ -7268,7 +7268,7 @@
        "$646-675                               53.526855  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7287,8 +7287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "1c0b803b",
+   "execution_count": 85,
+   "id": "2b2cbb0e",
    "metadata": {},
    "outputs": [
     {
@@ -7387,7 +7387,7 @@
        "$646-675                                     54  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7409,8 +7409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "c547826b",
+   "execution_count": 86,
+   "id": "9b9e34a3",
    "metadata": {},
    "outputs": [
     {
@@ -7427,7 +7427,7 @@
        "Name: school_name, dtype: float64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7438,8 +7438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "d236674d",
+   "execution_count": 87,
+   "id": "2a75858c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7450,8 +7450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "0b7166a2",
+   "execution_count": 88,
+   "id": "8560a4bb",
    "metadata": {},
    "outputs": [
     {
@@ -7600,7 +7600,7 @@
        "Griffin High School                       $586-630  Medium (1000-1999)  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7614,8 +7614,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "f65ad986",
+   "execution_count": 89,
+   "id": "1131474e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7633,8 +7633,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "a7612d0a",
+   "execution_count": 90,
+   "id": "64413615",
    "metadata": {},
    "outputs": [
     {
@@ -7716,7 +7716,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7735,9 +7735,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "f67de219",
-   "metadata": {},
+   "execution_count": 91,
+   "id": "f0a86583",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -7818,7 +7820,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7836,6 +7838,212 @@
     "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
     "\n",
     "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "a4f437fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "f864ba51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame:\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "\"Average Math Score\" : type_math_scores,\n",
+    "\"Average Reading Score\": type_reading_scores,\n",
+    "\"% Passing Math\": type_passing_math,\n",
+    "\"% Passing Reading\": type_passing_reading,\n",
+    "\"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "767d7a49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
    ]
   }
  ],
