--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "0e7c0872",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "6959e39a",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "1bcd5aca",
    "metadata": {
     "scrolled": true
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "c55367cf",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "3d14c3e0",
    "metadata": {
     "scrolled": true
@@ -358,7 +358,7 @@
        "39169           95.0        75.0  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "6eaeae3a",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "4        84.0          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "42474a83",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "2f13f9bc",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "f4fc4f5a",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "3969ed52",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "5198705d",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "7a977b4d",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "e9ef44e7",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
        "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "6fadd460",
    "metadata": {},
    "outputs": [],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "357516ca",
    "metadata": {},
    "outputs": [
@@ -857,30 +857,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rodriguez High School</th>\n",
-       "      <td>District</td>\n",
-       "      <td>3999</td>\n",
-       "      <td>2547363.0</td>\n",
-       "      <td>637.0</td>\n",
-       "      <td>76.842711</td>\n",
-       "      <td>80.744686</td>\n",
-       "      <td>66.366592</td>\n",
-       "      <td>80.220055</td>\n",
-       "      <td>52.988247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shelton High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1761</td>\n",
-       "      <td>1056600.0</td>\n",
-       "      <td>600.0</td>\n",
-       "      <td>83.359455</td>\n",
-       "      <td>83.725724</td>\n",
-       "      <td>93.867121</td>\n",
-       "      <td>95.854628</td>\n",
-       "      <td>89.892107</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>Thomas High School</th>\n",
        "      <td>Charter</td>\n",
@@ -922,36 +898,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                      School Type  Total Students  Total School Budget  \\\n",
-       "Rodriguez High School    District            3999            2547363.0   \n",
-       "Shelton High School       Charter            1761            1056600.0   \n",
-       "Thomas High School        Charter            1635            1043130.0   \n",
-       "Wilson High School        Charter            2283            1319574.0   \n",
-       "Wright High School        Charter            1800            1049400.0   \n",
+       "                   School Type  Total Students  Total School Budget  \\\n",
+       "Thomas High School     Charter            1635            1043130.0   \n",
+       "Wilson High School     Charter            2283            1319574.0   \n",
+       "Wright High School     Charter            1800            1049400.0   \n",
        "\n",
-       "                       Per Student Budget  Average Math Score  \\\n",
-       "Rodriguez High School               637.0           76.842711   \n",
-       "Shelton High School                 600.0           83.359455   \n",
-       "Thomas High School                  638.0           83.350937   \n",
-       "Wilson High School                  578.0           83.274201   \n",
-       "Wright High School                  583.0           83.682222   \n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Thomas High School               638.0           83.350937   \n",
+       "Wilson High School               578.0           83.274201   \n",
+       "Wright High School               583.0           83.682222   \n",
        "\n",
-       "                       Average Reading Score  % Passing Math  \\\n",
-       "Rodriguez High School              80.744686       66.366592   \n",
-       "Shelton High School                83.725724       93.867121   \n",
-       "Thomas High School                 83.896082       66.911315   \n",
-       "Wilson High School                 83.989488       93.867718   \n",
-       "Wright High School                 83.955000       93.333333   \n",
+       "                    Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Thomas High School              83.896082       66.911315          69.663609   \n",
+       "Wilson High School              83.989488       93.867718          96.539641   \n",
+       "Wright High School              83.955000       93.333333          96.611111   \n",
        "\n",
-       "                       % Passing Reading  % Overall Passing  \n",
-       "Rodriguez High School          80.220055          52.988247  \n",
-       "Shelton High School            95.854628          89.892107  \n",
-       "Thomas High School             69.663609          65.076453  \n",
-       "Wilson High School             96.539641          90.582567  \n",
-       "Wright High School             96.611111          90.333333  "
+       "                    % Overall Passing  \n",
+       "Thomas High School          65.076453  \n",
+       "Wilson High School          90.582567  \n",
+       "Wright High School          90.333333  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,12 +938,12 @@
     "    \"% Overall Passing\": per_overall_passing_percentage})\n",
     "\n",
     "\n",
-    "per_school_summary_df.tail(5)"
+    "per_school_summary_df.tail(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "751fcf8f",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1234,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "dda0b032",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1260,7 @@
        "1174"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "bf7228b6",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1289,7 @@
        "1094"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "43f3df65",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1318,7 @@
        "1139"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "fdfe5a4e",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1347,7 @@
        "1064"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "5f843135",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1378,7 @@
        "93.18568994889267"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "id": "ec0244b9",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1403,7 @@
        "97.01873935264055"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "2c23adcd",
    "metadata": {
     "scrolled": true
@@ -1462,7 +1430,7 @@
        "90.63032367972743"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "50d8dcf9",
    "metadata": {},
    "outputs": [
@@ -1576,7 +1544,7 @@
        "Wright High School          90.333333  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "id": "e914545c",
    "metadata": {},
    "outputs": [
@@ -1690,7 +1658,7 @@
        "Wright High School          90.333333  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "id": "76b6773f",
    "metadata": {},
    "outputs": [],
@@ -1717,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "id": "20ed32e3",
    "metadata": {},
    "outputs": [
@@ -2008,7 +1976,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2027,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "id": "741ecb57",
    "metadata": {
     "scrolled": true
@@ -2160,7 +2128,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2175,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "id": "0e27d0d2",
    "metadata": {},
    "outputs": [
@@ -2306,7 +2274,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2331,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "id": "982e1fed",
    "metadata": {},
    "outputs": [],
@@ -2361,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "id": "90c49e9b",
    "metadata": {},
    "outputs": [
@@ -2529,7 +2497,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2547,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "id": "8d1c0c0c",
    "metadata": {},
    "outputs": [
@@ -2715,7 +2683,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2733,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "id": "cce81e23",
    "metadata": {
     "scrolled": true
@@ -2755,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "id": "d8fcbb74",
    "metadata": {},
    "outputs": [
@@ -2915,7 +2883,7 @@
        "Wright High School     83.3  84.0  83.8  83.6"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2929,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "id": "d3ae3215",
    "metadata": {},
    "outputs": [
@@ -3089,7 +3057,7 @@
        "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3111,7 +3079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "id": "10974dbd",
    "metadata": {},
    "outputs": [
@@ -3435,7 +3403,7 @@
        "Wright High School                            <$586  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3460,7 +3428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "id": "c1ec7a89",
    "metadata": {},
    "outputs": [],
@@ -3476,7 +3444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 38,
    "id": "0f47ef24",
    "metadata": {},
    "outputs": [],
@@ -3493,7 +3461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 39,
    "id": "1a1ac55d",
    "metadata": {},
    "outputs": [],
@@ -3517,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "id": "f9304143",
    "metadata": {},
    "outputs": [
@@ -3667,7 +3635,7 @@
        "Griffin High School                       $586-630  Medium (1000-1999)  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3686,7 +3654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "id": "77af9c0d",
    "metadata": {},
    "outputs": [],
@@ -3702,7 +3670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "id": "86dfbdde",
    "metadata": {
     "scrolled": true
@@ -3721,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "id": "0fa8c20a",
    "metadata": {},
    "outputs": [
@@ -3804,7 +3772,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3830,7 +3798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "id": "5591a6b9",
    "metadata": {},
    "outputs": [],
@@ -3846,7 +3814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "id": "e982522e",
    "metadata": {},
    "outputs": [],
@@ -3863,7 +3831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "id": "b4443fc6",
    "metadata": {},
    "outputs": [
@@ -3936,7 +3904,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3954,7 +3922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "id": "ff1d5af7",
    "metadata": {},
    "outputs": [
@@ -4013,7 +3981,7 @@
        "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
