--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4204,7 +4204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 56,
    "id": "409fe759",
    "metadata": {},
    "outputs": [
@@ -4303,7 +4303,7 @@
        "Wright High School          90.333333  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8012,6 +8012,129 @@
     "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
     "\n",
     "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "cfeb9253",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th>School Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "      <td>$631-645</td>\n",
+       "      <td>Medium (1000-1999)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "      <td>&lt;$586</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>$1,049,400.00</td>\n",
+       "      <td>$583.00</td>\n",
+       "      <td>83.682222</td>\n",
+       "      <td>83.955000</td>\n",
+       "      <td>93.333333</td>\n",
+       "      <td>96.611111</td>\n",
+       "      <td>90.333333</td>\n",
+       "      <td>&lt;$586</td>\n",
+       "      <td>Medium (1000-1999)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   School Type  Total Students Total School Budget  \\\n",
+       "Thomas High School     Charter            1635       $1,043,130.00   \n",
+       "Wilson High School     Charter            2283       $1,319,574.00   \n",
+       "Wright High School     Charter            1800       $1,049,400.00   \n",
+       "\n",
+       "                   Per Student Budget  Average Math Score  \\\n",
+       "Thomas High School            $638.00           83.418349   \n",
+       "Wilson High School            $578.00           83.274201   \n",
+       "Wright High School            $583.00           83.682222   \n",
+       "\n",
+       "                    Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Thomas High School              83.848930       93.272171          97.308869   \n",
+       "Wilson High School              83.989488       93.867718          96.539641   \n",
+       "Wright High School              83.955000       93.333333          96.611111   \n",
+       "\n",
+       "                    % Overall Passing Spending Ranges (Per Student)  \\\n",
+       "Thomas High School          90.948012                      $631-645   \n",
+       "Wilson High School          90.582567                         <$586   \n",
+       "Wright High School          90.333333                         <$586   \n",
+       "\n",
+       "                           School Size  \n",
+       "Thomas High School  Medium (1000-1999)  \n",
+       "Wilson High School   Large (2000-5000)  \n",
+       "Wright High School  Medium (1000-1999)  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_school_summary_df.tail(3)"
    ]
   }
  ],
